cmake_minimum_required(VERSION 3.14)
project("Project Euler" LANGUAGES CXX)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_library(common common.cpp)

add_executable(euler001 euler001.cpp)
add_executable(euler002 euler002.cpp)
add_executable(euler003 euler003.cpp)
add_executable(euler004 euler004.cpp)
add_executable(euler005 euler005.cpp)
add_executable(euler006 euler006.cpp)
add_executable(euler007 euler007.cpp)
add_executable(euler008 euler008.cpp)
add_executable(euler009 euler009.cpp)
add_executable(euler010 euler010.cpp)

target_compile_features(common   PUBLIC cxx_std_17)
target_compile_features(euler001 PUBLIC cxx_std_17)
target_compile_features(euler002 PUBLIC cxx_std_17)
target_compile_features(euler003 PUBLIC cxx_std_17)
target_compile_features(euler004 PUBLIC cxx_std_17)
target_compile_features(euler005 PUBLIC cxx_std_17)
target_compile_features(euler006 PUBLIC cxx_std_17)
target_compile_features(euler007 PUBLIC cxx_std_17)
target_compile_features(euler008 PUBLIC cxx_std_17)
target_compile_features(euler009 PUBLIC cxx_std_17)
target_compile_features(euler010 PUBLIC cxx_std_17)

target_compile_options(common   PRIVATE -Wall -Wextra -Wmost -pedantic -Wconversion -Wfloat-equal)
target_compile_options(euler001 PRIVATE -Wall -Wextra -Wmost -pedantic -Wconversion -Wfloat-equal)
target_compile_options(euler002 PRIVATE -Wall -Wextra -Wmost -pedantic -Wconversion -Wfloat-equal)
target_compile_options(euler003 PRIVATE -Wall -Wextra -Wmost -pedantic -Wconversion -Wfloat-equal)
target_compile_options(euler004 PRIVATE -Wall -Wextra -Wmost -pedantic -Wconversion -Wfloat-equal)
target_compile_options(euler005 PRIVATE -Wall -Wextra -Wmost -pedantic -Wconversion -Wfloat-equal)
target_compile_options(euler006 PRIVATE -Wall -Wextra -Wmost -pedantic -Wconversion -Wfloat-equal)
target_compile_options(euler007 PRIVATE -Wall -Wextra -Wmost -pedantic -Wconversion -Wfloat-equal)
target_compile_options(euler008 PRIVATE -Wall -Wextra -Wmost -pedantic -Wconversion -Wfloat-equal)
target_compile_options(euler009 PRIVATE -Wall -Wextra -Wmost -pedantic -Wconversion -Wfloat-equal)
target_compile_options(euler010 PRIVATE -Wall -Wextra -Wmost -pedantic -Wconversion -Wfloat-equal)

target_link_libraries(euler007 PRIVATE common)
target_link_libraries(euler010 PRIVATE common)

set_target_properties(common   PROPERTIES CXX_EXTENSIONS OFF)
set_target_properties(euler001 PROPERTIES CXX_EXTENSIONS OFF)
set_target_properties(euler002 PROPERTIES CXX_EXTENSIONS OFF)
set_target_properties(euler003 PROPERTIES CXX_EXTENSIONS OFF)
set_target_properties(euler004 PROPERTIES CXX_EXTENSIONS OFF)
set_target_properties(euler005 PROPERTIES CXX_EXTENSIONS OFF)
set_target_properties(euler006 PROPERTIES CXX_EXTENSIONS OFF)
set_target_properties(euler007 PROPERTIES CXX_EXTENSIONS OFF)
set_target_properties(euler008 PROPERTIES CXX_EXTENSIONS OFF)
set_target_properties(euler009 PROPERTIES CXX_EXTENSIONS OFF)
set_target_properties(euler010 PROPERTIES CXX_EXTENSIONS OFF)
